name:                trie-based-frp
version:             0.1.0.0
synopsis:            An implementation of higher-order FRP based on shared tries.
homepage:            https://github.com/gelisam/trie-based-frp
license:             PublicDomain
author:              Samuel GeÌlineau
maintainer:          gelisam+github@gmail.com
category:            FRP
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable trie-based-frp
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , constraints
                     , MemoTrie
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -W -Wall
